--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -12,7 +12,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (helper_functions.py, line 72)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"D:\\Programs\\Anaconda\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3326\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-08cb7bd63cde>\"\u001b[1;36m, line \u001b[1;32m1\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    import helper_functions as hlf\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\helper_functions.py\"\u001b[1;36m, line \u001b[1;32m72\u001b[0m\n\u001b[1;33m    character_list.append(heroes'\u001b[0m\n\u001b[1;37m                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "import helper_functions as hlf\n",
     "import numpy as np\n",
@@ -39,140 +51,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sentinal_1</th>\n",
-       "      <th>Sentinal_2</th>\n",
-       "      <th>Sentinal_3</th>\n",
-       "      <th>Sentinal_4</th>\n",
-       "      <th>Sentinal_5</th>\n",
-       "      <th>Scourge_1</th>\n",
-       "      <th>Scourge_2</th>\n",
-       "      <th>Scourge_3</th>\n",
-       "      <th>Scourge_4</th>\n",
-       "      <th>Scourge_5</th>\n",
-       "      <th>Won</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Sven</td>\n",
-       "      <td>Lone Druid</td>\n",
-       "      <td>Venomancer</td>\n",
-       "      <td>Clockwerk</td>\n",
-       "      <td>Shadow Shaman</td>\n",
-       "      <td>Invoker</td>\n",
-       "      <td>Gyrocopter</td>\n",
-       "      <td>Anti-Mage</td>\n",
-       "      <td>Alchemist</td>\n",
-       "      <td>Slark</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Riki</td>\n",
-       "      <td>Tinker</td>\n",
-       "      <td>Puck</td>\n",
-       "      <td>Leshrac</td>\n",
-       "      <td>Nyx Assassin</td>\n",
-       "      <td>Slardar</td>\n",
-       "      <td>Sand King</td>\n",
-       "      <td>Spectre</td>\n",
-       "      <td>Necrolyte</td>\n",
-       "      <td>Warlock</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Invoker</td>\n",
-       "      <td>Mirana</td>\n",
-       "      <td>Pudge</td>\n",
-       "      <td>Magnus</td>\n",
-       "      <td>Keeper of the Light</td>\n",
-       "      <td>Rubick</td>\n",
-       "      <td>Tidehunter</td>\n",
-       "      <td>Queen of Pain</td>\n",
-       "      <td>Faceless Void</td>\n",
-       "      <td>Sniper</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Riki</td>\n",
-       "      <td>Centaur Warrunner</td>\n",
-       "      <td>Treant Protector</td>\n",
-       "      <td>Queen of Pain</td>\n",
-       "      <td>Broodmother</td>\n",
-       "      <td>Rubick</td>\n",
-       "      <td>Weaver</td>\n",
-       "      <td>Troll Warlord</td>\n",
-       "      <td>Alchemist</td>\n",
-       "      <td>Drow Ranger</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Razor</td>\n",
-       "      <td>Kunkka</td>\n",
-       "      <td>Drow Ranger</td>\n",
-       "      <td>Leshrac</td>\n",
-       "      <td>Zeus</td>\n",
-       "      <td>Riki</td>\n",
-       "      <td>Bane</td>\n",
-       "      <td>Visage</td>\n",
-       "      <td>Invoker</td>\n",
-       "      <td>Timbersaw</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Sentinal_1         Sentinal_2        Sentinal_3     Sentinal_4  \\\n",
-       "0       Sven         Lone Druid        Venomancer      Clockwerk   \n",
-       "1       Riki             Tinker              Puck        Leshrac   \n",
-       "2    Invoker             Mirana             Pudge         Magnus   \n",
-       "3       Riki  Centaur Warrunner  Treant Protector  Queen of Pain   \n",
-       "4      Razor             Kunkka       Drow Ranger        Leshrac   \n",
-       "\n",
-       "            Sentinal_5 Scourge_1   Scourge_2      Scourge_3      Scourge_4  \\\n",
-       "0        Shadow Shaman   Invoker  Gyrocopter      Anti-Mage      Alchemist   \n",
-       "1         Nyx Assassin   Slardar   Sand King        Spectre      Necrolyte   \n",
-       "2  Keeper of the Light    Rubick  Tidehunter  Queen of Pain  Faceless Void   \n",
-       "3          Broodmother    Rubick      Weaver  Troll Warlord      Alchemist   \n",
-       "4                 Zeus      Riki        Bane         Visage        Invoker   \n",
-       "\n",
-       "     Scourge_5  Won  \n",
-       "0        Slark    2  \n",
-       "1      Warlock    1  \n",
-       "2       Sniper    2  \n",
-       "3  Drow Ranger    1  \n",
-       "4    Timbersaw    1  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-cd49823ba55d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m df = pd.read_csv('dota_games.txt', sep=\",\", header=None, names=[\"Sentinal_1\", \"Sentinal_2\", \n\u001b[0m\u001b[0;32m      2\u001b[0m                                                                 \u001b[1;34m\"Sentinal_3\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Sentinal_4\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Sentinal_5\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                                                                 \u001b[1;34m\"Scourge_1\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Scourge_2\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Scourge_3\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                                                                 \"Scourge_4\", \"Scourge_5\", \"Won\"])\n\u001b[0;32m      5\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -185,31 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Sentinal_1    0\n",
-       "Sentinal_2    0\n",
-       "Sentinal_3    0\n",
-       "Sentinal_4    0\n",
-       "Sentinal_5    0\n",
-       "Scourge_1     0\n",
-       "Scourge_2     0\n",
-       "Scourge_3     0\n",
-       "Scourge_4     0\n",
-       "Scourge_5     0\n",
-       "Won           0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check for fragmented data\n",
     "df.isnull().sum()"
@@ -217,136 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\pandas\\core\\frame.py:4223: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().rename(**kwargs)\n",
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n",
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "D:\\Programs\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:24: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Hero_1</th>\n",
-       "      <th>Hero_2</th>\n",
-       "      <th>Hero_3</th>\n",
-       "      <th>Hero_4</th>\n",
-       "      <th>Hero_5</th>\n",
-       "      <th>Won</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Riki</td>\n",
-       "      <td>Tinker</td>\n",
-       "      <td>Puck</td>\n",
-       "      <td>Leshrac</td>\n",
-       "      <td>Nyx Assassin</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Riki</td>\n",
-       "      <td>Centaur Warrunner</td>\n",
-       "      <td>Treant Protector</td>\n",
-       "      <td>Queen of Pain</td>\n",
-       "      <td>Broodmother</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Razor</td>\n",
-       "      <td>Kunkka</td>\n",
-       "      <td>Drow Ranger</td>\n",
-       "      <td>Leshrac</td>\n",
-       "      <td>Zeus</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Morphling</td>\n",
-       "      <td>Omniknight</td>\n",
-       "      <td>Pudge</td>\n",
-       "      <td>Crystal Maiden</td>\n",
-       "      <td>Razor</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Brewmaster</td>\n",
-       "      <td>Leshrac</td>\n",
-       "      <td>Ogre Magi</td>\n",
-       "      <td>Kunkka</td>\n",
-       "      <td>Riki</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Hero_1             Hero_2            Hero_3          Hero_4  \\\n",
-       "0        Riki             Tinker              Puck         Leshrac   \n",
-       "1        Riki  Centaur Warrunner  Treant Protector   Queen of Pain   \n",
-       "2       Razor             Kunkka       Drow Ranger         Leshrac   \n",
-       "3   Morphling         Omniknight             Pudge  Crystal Maiden   \n",
-       "4  Brewmaster            Leshrac         Ogre Magi          Kunkka   \n",
-       "\n",
-       "         Hero_5  Won  \n",
-       "0  Nyx Assassin    1  \n",
-       "1   Broodmother    1  \n",
-       "2          Zeus    1  \n",
-       "3         Razor    1  \n",
-       "4          Riki    1  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a new df with all the winning teams lineups\n",
     "sentinal_df = df[['Sentinal_1','Sentinal_2','Sentinal_3','Sentinal_4','Sentinal_5','Won']]\n",
@@ -385,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
