--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -186,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -218,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -443,8 +447,7 @@
     "# merge the dataframes to create a df that contains all the lineups and if they won or not\n",
     "lineups = pd.concat([sentinal_winners, scourge_winners, sentinal_losers, scourge_losers])\n",
     "lineups.reset_index(drop=True, inplace=True)\n",
-    "# lines_csv = lineups.to_csv('lineups.csv', index = None, header=True)\n",
-    "lineups"
+    "# lines_csv = lineups.to_csv('lineups.csv', index = None, header=True)"
    ]
   },
   {
@@ -1336,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1486,116 +1489,6 @@
    "metadata": {},
    "source": [
     "# Removed features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # nuke/disable characters\n",
-    "# = np.array(['Crystal Maiden', 'Lina', 'Lion', 'Oracle', 'Skywrath Mage', 'Witch Doctor',\n",
-    "#                          'Earthshaker', 'Death Prophet', 'Lich', 'Ancient Apparition', 'Shadow Shaman',\n",
-    "#                          'Puck', 'Jakiro', 'Necrophos', 'Leshrac', 'Disruptor', 'Outworld Devourer',\n",
-    "#                          'Bane', 'Ogre Magi', 'Zeus', 'Doom', 'Dazzle', 'Morphling', 'Nyx Assassin',\n",
-    "#                          'Rubick', 'Queen of Pain', 'Tinker'])\n",
-    "\n",
-    "# # create new feature: how many nukers/disablers in team\n",
-    "# nukers = hlf.hero_roles('Nukers')\n",
-    "# nuke_disable_df = features_df.where(~features_df.isin(nuke_disable), None)\n",
-    "# nuke_disable_df = pd.DataFrame(nuke_disable_df.isnull().sum(axis=1), columns=['Nuke/Disable'])\n",
-    "# # nuke_disable_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Safe lane Carry characters\n",
-    "# carry = np.array(['Alchemist', 'Anti-Mage', 'Arc Warden', 'Bloodseeker', 'Clinkz'\n",
-    "#                   'Chaos Knight', 'Drow Ranger', 'Faceless Void', 'Gyrocopter',\n",
-    "#                   'Huskar', 'Juggernaut', 'Kunkka', 'Lifestealer', 'Lone Druid',\n",
-    "#                   'Luna', 'Lycan' 'Medusa', 'Meepo', 'Morphling', 'Naga Siren',\n",
-    "#                   'Phantom Assassin', 'Phantom Lancer', 'Slark', 'Spectre',\n",
-    "#                   'Sven', 'Terrorblade', 'Timbersaw', 'Troll Warlord', 'Tiny',\n",
-    "#                   'Ursa', 'Vengeful Spirit', 'Venomancer', 'Viper', 'Weaver'])\n",
-    "\n",
-    "# # create new feature: amount of carry character in a team\n",
-    "# carry_df = features_df.where(~features_df.isin(carry), None)\n",
-    "# carry_df = pd.DataFrame(carry_df.isnull().sum(axis=1), columns=['Carry']) \n",
-    "# # carry_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # support characters\n",
-    "# support = np.array(['Ancient Apparition', 'Bristleback', 'Clockwerk', 'Chen',\n",
-    "#                     'Bane', 'Crystal Maiden', 'Dazzle', 'Disruptor', 'Doom',\n",
-    "#                     'Earthshaker', 'Enchantress', 'Wisp', 'Jakiro', 'Leshrac'\n",
-    "#                     'Keeper of the Light', 'Lich', 'Lina', 'Lion', 'Nyx Assassin',\n",
-    "#                     'Ogre Magi', 'Omniknight', 'Oracle', 'Phoenix', 'Rubick',\n",
-    "#                     'Shadow Demon', 'Shadow Shaman', 'Silencer', 'Treant Protector',\n",
-    "#                     'Undying', 'Visage', 'Warlock', 'Weaver', 'Windrunner', 'Winter Wyvern',\n",
-    "#                     'Witch Doctor', 'Oracle'])\n",
-    "\n",
-    "# # create new feature: amount of support characters in a team\n",
-    "# support_df = features_df.where(~features_df.isin(support), None)\n",
-    "# support_df = pd.DataFrame(support_df.isnull().sum(axis=1), columns=['Support']) \n",
-    "# # support_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # support characters\n",
-    "# support = np.array(['Ancient Apparition', 'Bristleback', 'Clockwerk', 'Chen',\n",
-    "#                     'Bane', 'Crystal Maiden', 'Dazzle', 'Disruptor', 'Doom',\n",
-    "#                     'Earthshaker', 'Enchantress', 'Wisp', 'Jakiro', 'Leshrac'\n",
-    "#                     'Keeper of the Light', 'Lich', 'Lina', 'Lion', 'Nyx Assassin',\n",
-    "#                     'Ogre Magi', 'Omniknight', 'Oracle', 'Phoenix', 'Rubick',\n",
-    "#                     'Shadow Demon', 'Shadow Shaman', 'Silencer', 'Treant Protector',\n",
-    "#                     'Undying', 'Visage', 'Warlock', 'Weaver', 'Windrunner', 'Winter Wyvern',\n",
-    "#                     'Witch Doctor', 'Oracle'])\n",
-    "\n",
-    "# # create new feature: amount of support characters in a team\n",
-    "# support_df = features_df.where(~features_df.isin(support), None)\n",
-    "# support_df = pd.DataFrame(support_df.isnull().sum(axis=1), columns=['Support']) \n",
-    "# # support_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # ranged heroes\n",
-    "# ranged = np.array(['Techies', 'Ancient Apparition', 'Lina', 'Chen', 'Enchantress', \n",
-    "#                    'Mirana', 'Pugna', 'Arc Warden', 'Disruptor', 'Drow Ranger', \n",
-    "#                    'Skywrath Mage', 'Oracle', 'Crystal Maiden', 'Death Prophet', 'Invoker', \n",
-    "#                    'Keeper of the Light', 'Leshrac', 'Lion', 'Medusa', \"Nature's Prophet\", \n",
-    "#                    'Silencer', 'Visage', 'Warlock', 'Windrunner', 'Witch Doctor',  'Clinkz', \n",
-    "#                    'Viper', 'Dazzle', 'Lich', 'Lone Druid', 'Puck', 'Queen of Pain', 'Rubick', \n",
-    "#                    'Sniper', 'Enigma', 'Wisp', 'Necrophos', 'Phoenix', 'Shadow Demon', \n",
-    "#                    'Shadow Fiend', 'Tinker', 'Troll Warlord', 'Storm Spirit', 'Razor', \n",
-    "#                    'Outworld Devourer', 'Venomancer', 'Weaver', 'Winter Wyvern', 'Bane', \n",
-    "#                    'Huskar', 'Jakiro', 'Shadow Shaman', 'Vengeful Spirit', 'Zeus', 'Batrider', \n",
-    "#                    'Gyrocopter', 'Morphling', 'Luna'])\n",
-    "\n",
-    "# # create a new feature: how many ranged heroes in\n",
-    "# melee_df = features_df.where(~features_df.isin(ranged), None)\n",
-    "# melee_df = pd.DataFrame(melee_df.isnull().sum(axis=1), columns=['Ranged'])\n",
-    "# melee_df.tail()"
    ]
   },
   {
