--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,16 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall Score: 54.48\n",
-      "Accuracy Score: 52.47\n",
-      "F1 Score: 53.22\n"
+      "Recall Score: 51.89\n",
+      "Accuracy Score: 51.93\n",
+      "F1 Score: 52.46\n"
      ]
     }
    ],
@@ -368,20 +368,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Accuracy: 0.5195 at k=9\n"
+     "ename": "AttributeError",
+     "evalue": "module 'helper_functions' has no attribute 'multiple_knn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-154-4a61914a3ca2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# running the model again k =  3, 8, 9, 10, 11\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mknn_best_acc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mknn_best_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhlf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmultiple_knn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mks\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m11\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Best Accuracy: {knn_best_acc} at k={knn_best_k}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'helper_functions' has no attribute 'multiple_knn'"
      ]
     }
    ],
    "source": [
-    "# running the model again k =  2, 3, 8, 9, 10\n",
-    "knn_best_acc, knn_best_k = hlf.multiple_knn(df, labels, ks=[2, 3, 8, 9, 10])\n",
+    "# running the model again k =  3, 8, 9, 10, 11\n",
+    "knn_best_acc, knn_best_k = hlf.multiple_knn(df, labels, ks=[3, 8, 9, 10, 11])\n",
     "print(f\"Best Accuracy: {knn_best_acc} at k={knn_best_k}\")"
    ]
   },
