--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -10,10 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "import helper_functions as hlf\n",
     "import numpy as np\n",
     "import pandas as pd\n",
