--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -259,23 +259,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#   KNN Model:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Reduce dimonsionality so my computer won't explode trying to run SVM with 30k observations and over 100 features\n",
-    "x_reduced = PCA(n_components=10).fit_transform(df)\n",
+    "x_reduced = PCA(n_components=15).fit_transform(df)\n",
     "rx_train, rx_test, ry_train, ry_test = train_test_split(x_reduced, labels,\n",
     "                                                        test_size=0.25,\n",
     "                                                        random_state=123)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#   KNN Model:"
    ]
   },
   {
@@ -18471,7 +18471,7 @@
    ],
    "source": [
     "hlf.plot_feature_importance(optimal_ada, x_test, n=20)\n",
-    "plt.savefig('ada_feat_import.png')"
+    "# plt.savefig('ada_feat_import.png')"
    ]
   },
   {
@@ -18791,7 +18791,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -19511,6 +19513,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'hero': 51, 'rad_win': True, 'is_rad': True},\n",
+       " {'hero': 77, 'rad_win': True, 'is_rad': True},\n",
+       " {'hero': 108, 'rad_win': True, 'is_rad': True},\n",
+       " {'hero': 64, 'rad_win': True, 'is_rad': True},\n",
+       " {'hero': 28, 'rad_win': True, 'is_rad': True},\n",
+       " {'hero': 93, 'rad_win': True, 'is_rad': False},\n",
+       " {'hero': 111, 'rad_win': True, 'is_rad': False},\n",
+       " {'hero': 16, 'rad_win': True, 'is_rad': False},\n",
+       " {'hero': 86, 'rad_win': True, 'is_rad': False},\n",
+       " {'hero': 82, 'rad_win': True, 'is_rad': False}]"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hero_ids =[]\n",
+    "for player in match['players']:\n",
+    "    player_info ={}\n",
+    "    player_info['hero'] = player['hero_id']\n",
+    "    player_info['rad_win'] = player['radiant_win']\n",
+    "    player_info['is_rad'] = player['isRadiant']\n",
+    "    hero_ids.append(player_info)\n",
+    "    \n",
+    "    \n",
+    "hero_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
    "outputs": [
@@ -20091,21 +20131,6 @@
     "    ]\n",
     "}\n",
     "© 2019 GitHub, Inc."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hero_ids =[]\n",
-    "for player in match['players']:\n",
-    "    player_info ={}\n",
-    "    player_info['hero'] = player['hero_id']\n",
-    "    player_info['rad_win'] = player['radiant_win']\n",
-    "    player_info['is_rad'] = player['isRadiant']\n",
-    "    hero_ids.append(player_info)"
    ]
   },
   {
