--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -527,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# roles = 'Ranged_heroes', 'Supports', 'Carries', 'Nukers', 'Durable' \n",
+    "# roles = 'Ranged_heroes', 'Supports', 'Carries', 'Nukers', 'Disablers'\n",
     "\n",
     "# create a new feature: how many ranged heroes in the team\n",
     "ranged = hlf.hero_roles('Ranged_heroes')  \n",
