changed helper functions and added images

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -1335,7 +1335,7 @@
     "\n",
     "# save as new csv to for modeling purpose\n",
     "scaled_csv = scaled_features_df.to_csv('dota2_scaled.csv', index=None, header=True)\n",
-    "scaled_features_df"
+    "scaled_features_df()"
    ]
   },
   {
